# wallpaper-splitter

./: .gitignore  CMakeLists.txt  README.md  build.sh  generate-icons.sh  org.wallpapersplitter.app.desktop  org.wallpapersplitter.app.metainfo.xml  org.wallpapersplitter.app.yml  original-icon-file.xcf
.github/workflows/: build.yml  ci.yml  flatpak-build.yml
include/core/: image_splitter.h  monitor_detector.h  monitor_info.h  wallpaper_applier.h
kde/: wallpaper-splitter.desktop
src/cli/: main.cpp
src/core/: image_splitter.cpp  monitor_detector.cpp  wallpaper_applier.cpp
src/kde/: imagegallery.cpp  imagegallery.h  imagepreview.cpp  imagepreview.h  main.cpp  mainwindow.cpp  mainwindow.h  monitoroverlay.cpp  monitoroverlay.h  monitorwidget.cpp  monitorwidget.h
